[gd_scene load_steps=12 format=2]

[ext_resource path="res://GFX/TreePiece.png" type="Texture" id=1]
[ext_resource path="res://GFX/BeePiece.png" type="Texture" id=2]
[ext_resource path="res://GFX/SunPiece.png" type="Texture" id=3]
[ext_resource path="res://GFX/SkullPiece.png" type="Texture" id=4]
[ext_resource path="res://GFX/WaterPiece.png" type="Texture" id=5]
[ext_resource path="res://GUI/pixel_theme.tres" type="Theme" id=6]
[ext_resource path="res://Scripts/BombWindow.gd" type="Script" id=7]
[ext_resource path="res://SFX/Success.wav" type="AudioStream" id=8]
[ext_resource path="res://SFX/Failure.wav" type="AudioStream" id=9]
[ext_resource path="res://SFX/BombNotify.wav" type="AudioStream" id=10]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 3 ), ExtResource( 1 ), ExtResource( 5 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="BombWindow" type="Node2D"]
script = ExtResource( 7 )

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
theme = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -4 )
scale = Vector2( 2, 2 )
frames = SubResource( 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = -28.0
margin_top = -32.0
margin_right = 28.0
margin_bottom = -16.0
theme = ExtResource( 6 )
text = "Find match!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
margin_left = -24.0
margin_top = 12.0
margin_right = 72.0
margin_bottom = 28.0
rect_scale = Vector2( 0.5, 0.5 )
theme = ExtResource( 6 )
text = "Turns until failure:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TurnCount" type="RichTextLabel" parent="."]
margin_left = -4.0
margin_top = 16.0
margin_right = 4.0
margin_bottom = 32.0
theme = ExtResource( 6 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Success" type="RichTextLabel" parent="."]
visible = false
margin_left = -20.0
margin_top = 16.0
margin_right = 24.0
margin_bottom = 32.0
theme = ExtResource( 6 )
custom_colors/default_color = Color( 0.32549, 0.658824, 0.290196, 1 )
text = "SUCCESS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Failure" type="RichTextLabel" parent="."]
visible = false
margin_left = -16.0
margin_top = 16.0
margin_right = 24.0
margin_bottom = 32.0
theme = ExtResource( 6 )
custom_colors/default_color = Color( 0.945098, 0.239216, 0.27451, 1 )
text = "FAILURE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioSuccess" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -18.0

[node name="AudioFailure" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -18.0

[node name="AudioNotify" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -18.0
